syntax = "proto3";

package authentication;

import "common/base_response.proto";
import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/aldian78/go-react-ecommerce/proto/pb/authentication";

import "api/api.proto";

service AuthenticationService {
  rpc RegisterHandler(api.APIREQ) returns (api.APIRES);
  rpc LoginHandler(api.APIREQ) returns (api.APIRES);
  rpc LogoutHandler(api.APIREQ) returns (api.APIRES);
  rpc ChangePasswordHandler(api.APIREQ) returns (api.APIRES);
  rpc GetProfileHandler(api.APIREQ) returns (api.APIRES);
}

message RegisterRequest {
  string full_name = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string email = 2 [(buf.validate.field).string = { email: true, min_len: 1, max_len: 255 }];
  string password = 3 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string password_confirmation = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message RegisterResponse {
  common.BaseResponse base = 1;
}

message LoginRequest {
  string email = 1 [(buf.validate.field).string = { email: true, min_len: 1, max_len: 255 }];
  string password = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message LoginResponse {
  common.BaseResponse base = 1;
  string access_token = 2;
}

message LogoutRequest {}

message LogoutResponse {
  common.BaseResponse base = 1;
}

message ChangePasswordRequest {
  string old_password = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string new_password = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string new_password_confirmation = 3 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message ChangePasswordResponse {
  common.BaseResponse base = 1;
}

message GetProfileRequest {}

message GetProfileResponse {
  common.BaseResponse base = 1;
  string user_id = 2;
  string full_name = 3;
  string email = 4;
  string role_code = 5;
  google.protobuf.Timestamp member_since = 6;
}